<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controllers"
        android:orientation="vertical">
        <TextView
            android:id="@+id/audio_file_name"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="@dimen/font_large"
            android:gravity="center_horizontal"
            />
        <com.lippi.recorder.utils.ChartView
            android:id="@+id/audio_chart_view"
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:layout_height="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/controllers"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/endText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:id="@+id/prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/ic_skip_previous_white_48dp"
                android:contentDescription="@string/skip_prev" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:src="@drawable/ic_play_arrow_white_48dp"
                android:contentDescription="@string/play_pause" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/ic_skip_next_white_48dp"
                android:contentDescription="@string/skip_next" />

            <ImageView
                android:id="@+id/audio_list_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/audio_list" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>